[gd_scene load_steps=5 format=3 uid="uid://bky5nae3pmoi3"]

[ext_resource type="FontFile" uid="uid://doov86h8df6is" path="res://fonts/Mooli-Regular.ttf" id="1_1ygvc"]
[ext_resource type="Script" path="res://scripts/SelectScreen.gd" id="1_g7ry2"]
[ext_resource type="Texture2D" uid="uid://cg78cghl1obap" path="res://sprites/reshot-icon-chevron-arrow-left-circle-XY6MSRE5DN.svg" id="2_yyw78"]
[ext_resource type="Texture2D" uid="uid://n80rcb7ha07f" path="res://sprites/2.png" id="3_bhqb0"]

[node name="SelectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g7ry2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 360.0
offset_bottom = 640.0
color = Color(0, 0.317647, 0.215686, 1)

[node name="Colete" type="Label" parent="."]
layout_mode = 2
offset_top = 94.0
offset_right = 360.0
offset_bottom = 117.0
theme_override_fonts/font = ExtResource("1_1ygvc")
theme_override_font_sizes/font_size = 35
text = "Colete seu fungo:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ui_LE" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 244.5
offset_right = 56.0
offset_bottom = 268.5
scale = Vector2(2, 2)
texture_normal = ExtResource("2_yyw78")

[node name="PlayerSelect" type="Sprite2D" parent="."]
position = Vector2(180, 276.5)
texture = ExtResource("3_bhqb0")

[node name="ui_LD" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 292.5
offset_right = 352.0
offset_bottom = 316.5
rotation = 3.14159
scale = Vector2(2, 2)
texture_normal = ExtResource("2_yyw78")

[node name="confirme" type="Button" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 440.0
offset_right = 274.0
offset_bottom = 506.0
theme_override_fonts/font = ExtResource("1_1ygvc")
theme_override_font_sizes/font_size = 35
text = "Confirme"

[connection signal="pressed" from="ui_LE" to="." method="_on_ui_le_pressed"]
[connection signal="pressed" from="ui_LD" to="." method="_on_ui_ld_pressed"]
[connection signal="pressed" from="confirme" to="." method="_on_confirme_pressed"]
